Small change (testing visual studio git)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,33 @@
 ################################################################################
 
 /.vs/EShop
+/EShop/bin/Debug/netcoreapp3.1
+/EShop/obj/Debug/netcoreapp3.1/staticwebassets
+/EShop/obj/project.assets.json
+/EShop/obj/EShop.csproj.nuget.g.targets
+/EShop/obj/EShop.csproj.nuget.g.props
+/EShop/obj/EShop.csproj.nuget.dgspec.json
+/EShop/obj/EShop.csproj.nuget.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.Views.pdb
+/EShop/obj/Debug/netcoreapp3.1/EShop.Views.dll
+/EShop/obj/Debug/netcoreapp3.1/EShop.TagHelpers.output.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.TagHelpers.input.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.RazorTargetAssemblyInfo.cs
+/EShop/obj/Debug/netcoreapp3.1/EShop.RazorTargetAssemblyInfo.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.RazorCoreGenerate.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.RazorAssemblyInfo.cs
+/EShop/obj/Debug/netcoreapp3.1/EShop.RazorAssemblyInfo.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.pdb
+/EShop/obj/Debug/netcoreapp3.1/EShop.MvcApplicationPartsAssemblyInfo.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.exe
+/EShop/obj/Debug/netcoreapp3.1/EShop.dll
+/EShop/obj/Debug/netcoreapp3.1/EShop.csprojAssemblyReference.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.csproj.FileListAbsolute.txt
+/EShop/obj/Debug/netcoreapp3.1/EShop.csproj.CopyComplete
+/EShop/obj/Debug/netcoreapp3.1/EShop.assets.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.AssemblyInfoInputs.cache
+/EShop/obj/Debug/netcoreapp3.1/EShop.AssemblyInfo.cs
+/EShop/Properties
+/EShop/EShop.csproj.user
+/EShop/EShop.csproj
+/EShop.sln
